--- a/templates/views/eresources/eresources.jade
+++ b/templates/views/eresources/eresources.jade
@@ -7,22 +7,60 @@ block content
       .container
         .row
           .col-md-9
-            h3 Latest Publications
-            hr
-            row
-              each publication in publications
-                .col-md-2
-                  img(src=publication._.cover.fit(100, 180, {}))
-                  br
-                  | #{publication.title}
-                  br
-                  | #{publication.publicationType}
+            nav.navbar.navbar-default
+              .container-fluid
+                //- Mobile menu
+                .navbar-header
+                  button(type="button", data-toggle="collapse", aria-expanded="false", data-target="#publications-filter").navbar-toggle.collapsed
+                    span.sr-only Toggle navigation
+                    span.icon-bar
+                    span.icon-bar
+                    span.icon-bar
+                  //- a(href="#").navbar-brand Brand?
 
-          .col-md-3
-            h3 Categories
-            hr
+                #publications-filter.collapse.navbar-collapse
+                  ul.nav.navbar-nav
 
-        .row
-          .col-md-9
-            h3 Links
-            hr
+                    //- li
+                      a(href='#') Link
+                    //- li.dropdown
+                      a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
+                        | All
+                        span.caret
+                      ul.dropdown-menu
+                        li
+                          a(href='#') Title
+                        li
+                          a(href='#') Another action
+                        li
+                          a(href='#') Something else here
+                        li.divider(role='separator')
+                        li
+                          a(href='#') Separated link
+                        li.divider(role='separator')
+                        li
+                          a(href='#') One more separated link
+
+                  form.navbar-form.navbar-left
+                    //- button(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false").btn.btn-default.dropdown-toggle Industry&nbsp;
+                      span.caret
+                    ul.dropdown-menu
+                      li
+                        a(href="#") Agriculture
+                        a(href="#") Aquatic Resources
+                        a(href="#") Cakes
+                    .input-group
+                      input(type="text",placeholder="Search...").form-control
+                      span.input-group-btn
+                        button(type="button").btn.btn-default.form-control Go
+
+                  ul.nav.navbar-nav.navbar-right
+                    li
+                      a(href="/eresources?view=grid")
+                        span(aria-hidden="true").glyphicon.glyphicon-th
+                    li
+                      a(href="/eresources?view=list")
+                        span(aria-hidden="true").glyphicon.glyphicon-th-list
+
+
+            block publications
