added new routes and views for course, chapter and learning objects

--- a/templates/views/elearning/course.jade
+++ b/templates/views/elearning/course.jade
@@ -1,7 +1,7 @@
 extends ../../layouts/default
 
 block css
-	link(rel="stylesheet" type="text/css" href="/styles/course.css")
+	link(rel="stylesheet" type="text/css" href="/styles/elearning/elearning.css")
 
 mixin course(course)
 	.container-fluid
