--- a/templates/views/elearning/main.jade
+++ b/templates/views/elearning/main.jade
@@ -1,7 +1,8 @@
 extends ../../layouts/default
 
-block css
-  link(rel="stylesheet" type="text/css" href="/styles/course.css")
+//- block css
+//-   link(rel="stylesheet" type="text/css" href="/styles/elearning/elearning.css")
+  
 
 mixin allCourses(courses)
   h2.text-center All Courses
