--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -27,3 +27,4 @@
 @import "site/layout.less";
 @import "community/community.less";
 @import "eresources/eresources.less";
+@import "elearning/elearning.less";
