--- a/public/styles/elearning/elearning.less
+++ b/public/styles/elearning/elearning.less
@@ -1,8 +1,12 @@
-pbody {
+body {
     padding-top: 120px;
     background-color: rgba(250,250,250,1);
 }
-`
+
+/*
+  Vertical Thumbnails
+*/
+
 .label {
     display: inline-block;
     padding: .2em .6em .3em;
