Updated the homepage - adjust spaces of fiesta block

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -138,7 +138,7 @@ block content
 				.col-md-12
 					center
 						strong
-							p.fiesta(style="color:black") Celebrate our Filipino culture while promoting Science and Technology through the festivals hosted by different provinces in the country.
+							p.fiesta(style="color:black") Celebrate our Filipino culture while promoting Science and Technology through different events hosted by PCAARRD consortia.
 
 		.row
 			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
