--- a/templates/views/eresources/eresources.jade
+++ b/templates/views/eresources/eresources.jade
@@ -7,60 +7,46 @@ block content
       .container
         .row
           .col-md-9
-            nav.navbar.navbar-default
-              .container-fluid
-                //- Mobile menu
-                .navbar-header
-                  button(type="button", data-toggle="collapse", aria-expanded="false", data-target="#publications-filter").navbar-toggle.collapsed
-                    span.sr-only Toggle navigation
-                    span.icon-bar
-                    span.icon-bar
-                    span.icon-bar
-                  //- a(href="#").navbar-brand Brand?
+            .section-header
+              .title Latest Publications
+              .triangle
 
-                #publications-filter.collapse.navbar-collapse
-                  ul.nav.navbar-nav
+            hr.clear
+            .row
+              each publication in publications
+                .col-md-2
+                  a(href="/eresources/publication/"+publication._id)
+                    img(src=publication._.cover.fit(100, 180, {}))
+                    br
+                    | #{publication.title}
+              .col-xs-12.more-link
+                a(href="/eresources/publications") More Publications
 
-                    //- li
-                      a(href='#') Link
-                    //- li.dropdown
-                      a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
-                        | All
-                        span.caret
-                      ul.dropdown-menu
-                        li
-                          a(href='#') Title
-                        li
-                          a(href='#') Another action
-                        li
-                          a(href='#') Something else here
-                        li.divider(role='separator')
-                        li
-                          a(href='#') Separated link
-                        li.divider(role='separator')
-                        li
-                          a(href='#') One more separated link
-
-                  form.navbar-form.navbar-left
-                    //- button(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false").btn.btn-default.dropdown-toggle Industry&nbsp;
-                      span.caret
-                    ul.dropdown-menu
-                      li
-                        a(href="#") Agriculture
-                        a(href="#") Aquatic Resources
-                        a(href="#") Cakes
-                    .input-group
-                      input(type="text",placeholder="Search...").form-control
-                      span.input-group-btn
-                        button(type="button").btn.btn-default.form-control Go
-
-                  ul.nav.navbar-nav.navbar-right
-                    li
-                      a(href="/eresources?view=grid")
-                        span(aria-hidden="true").glyphicon.glyphicon-th
-                    li
-                      a(href="/eresources?view=list")
-                        span(aria-hidden="true").glyphicon.glyphicon-th-list
+          .col-md-3
+            .minor-section-header
+              .title Top Categories
+              .colored-bar
+            .row
+              //- if data.industries && data.industries.length
+              each industry in data.industries
+                  .col-xs-12
+                    | #{industry.name} &nbsp;
+                    span.badge #{industry.publicationCount}
 
 
-            block publications
+        .row
+          .col-md-9
+            .section-header
+              .title Links
+              .triangle
+            hr.clear
+            .row
+              each link in links
+                .col-xs-12.eresources-link
+                  img(src=link._.image.fill(200, 150, {})).image
+                  .data
+                    .title
+                      a(href=link.url) #{link.name}
+                    .description #{link.description}
+              .col-xs-12.more-link
+                a(href="/eresources/links") More Links
