Moved publications css. Added Image to Link Model

--- a/templates/views/community/community.jade
+++ b/templates/views/community/community.jade
@@ -3,7 +3,7 @@ extends ../../layouts/community
 block content
 
   .community-body
-    .container
+    .container-fluid
       .row
         .col-md-5
           h3
