--- a/templates/views/elearning/learningObject.jade
+++ b/templates/views/elearning/learningObject.jade
@@ -14,8 +14,7 @@ mixin learningObject(currLO)
     .row
       p Related: &nbsp;
       each tag in currLO.tags
-        span.label.label-info= tag
-          &nbsp;
+        span.label.label-info  #{tag} &nbsp;
 
 mixin recommendedTopics(recLO)
   each lo in recLO
@@ -68,7 +67,6 @@ block content
         .row
           .panel.panel-info
             .panel-heading 
-              a(href="/elearning/courses/page?page=1")
-                Other Topics
+              a(href="/elearning/courses") Other Topics
             .panel-body
               +otherTopics(data.otherLO)
