Added badges to top categories

--- a/public/styles/eresources/eresources.less
+++ b/public/styles/eresources/eresources.less
@@ -7,3 +7,72 @@
   font-weight: bold;
   color: #515151;
 }
+
+.eresources-link .image{
+  float: left;
+  margin-right: 20px;
+}
+
+.eresources-link {
+  margin-bottom: 20px;
+}
+
+.eresources-link .title {
+  font-weight: bold;
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+.more-link {
+  margin-bottom: 20px;
+  text-align: right;
+}
+
+.section-header {
+  width: 100%;
+}
+
+@header-color: #3062B7;
+
+.section-header .title {
+  height: 45px;
+  background-color: @header-color;
+  color: #FFFFFF;
+  float: left;
+  font-weight: bold;
+  font-size: 1.5em;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+}
+
+.section-header .triangle {
+  width: 0;
+  height: 0;
+  border-top: 45px solid @header-color;
+  border-right: 45px solid transparent;
+  float: left;
+}
+
+.clear {
+  clear: both;
+}
+
+.minor-section-header {
+
+}
+
+.minor-section-header .title {
+  font-weight: bold;
+  font-size: 1.5em;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.minor-section-header .colored-bar {
+  height: 4px;
+  width: 100%;
+  background-color: @header-color;
+}
