--- a/templates/views/eresources/publications.jade
+++ b/templates/views/eresources/publications.jade
@@ -56,10 +56,10 @@ block content
 
                   ul.nav.navbar-nav.navbar-right
                     li
-                      a(href="/eresources?view=grid")
+                      a(href="/eresources/publications?view=grid")
                         span(aria-hidden="true").glyphicon.glyphicon-th
                     li
-                      a(href="/eresources?view=list")
+                      a(href="/eresources/publications?view=list")
                         span(aria-hidden="true").glyphicon.glyphicon-th-list
 
 
