Started working on individual publication page

--- a/templates/views/eresources/publication.jade
+++ b/templates/views/eresources/publication.jade
@@ -4,5 +4,9 @@ block content
 
   .community-body
     #eresources-content
+      .container
+        .row
+          .xs
+
       | Pub content goes here
       | #{publication.title}
